fix overlapping screen states

--- a/css/coc-guide.css
+++ b/css/coc-guide.css
@@ -305,13 +305,13 @@
   }
 }
 
-@media (max-width:800px) and (min-width:350px) {
+@media (max-width:800px) and (min-width:351px) {
   #guide-content{
     font-size:0.9em;
   }
 }
 
-@media (min-width:800px) {
+@media (min-width:801px) {
   #guide-content  .left,
   #guide-content  .right{
     float:left;
